# PrinterCare

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
assets/styles/: dark.qss  light.qss
include/core/: AppInfo.h
include/localization/: AppTranslator.h
include/managers/: ConfigManager.h  HistoryManager.h  ReminderManager.h  StartupManager.h  TrayManager.h
include/models/: AppSettings.h
include/ui/: MainWindow.h  SettingsWindow.h  UiDecor.h
installer/: PrinterCare.iss
resources/: printercare.qrc
scripts/: deploy-release.ps1  run-dev.ps1
src/: main.cpp
src/localization/: AppTranslator.cpp
src/managers/: ConfigManager.cpp  HistoryManager.cpp  ReminderManager.cpp  StartupManager.cpp  TrayManager.cpp
src/smoke/: main.cpp
src/ui/: MainWindow.cpp  SettingsWindow.cpp  UiDecor.cpp
